--- a/index.html
+++ b/index.html
@@ -32,15 +32,59 @@
         />
       </nav>
     </header>
-    <main>
-      <section class="slider-section">
-        <img
-          id="slider-image"
-          alt="imagem-carrossel"
-          src="./assets/slider1.png"
-        />
-      </section>
-    </main>
+    <div class="slider">
+      <div class="slides">
+        <!--Radio Buttons-->
+        <input type="radio" name="radio-btn" id="radio1" />
+        <input type="radio" name="radio-btn" id="radio2" />
+        <input type="radio" name="radio-btn" id="radio3" />
+        <input type="radio" name="radio-btn" id="radio4" />
+        <input type="radio" name="radio-btn" id="radio5" />
+        <!--Fim Radio Buttons-->
+
+        <!--Slide Images-->
+
+        <div class="slide first">
+          <img src="./assets/slider1.png" alt="Imagem 1" />
+        </div>
+
+        <div class="slide">
+          <img src="./assets/slider2.png" alt="Imagem 2" />
+        </div>
+
+        <div class="slide">
+          <img src="./assets/slider3.png" alt="Imagem 3" />
+        </div>
+
+        <div class="slide">
+          <img src="./assets/slider4.png" alt="Imagem 4" />
+        </div>
+
+        <div class="slide">
+          <img src="./assets/slider5.png" alt="Imagem 5" />
+        </div>
+
+        <!--Fim Slide Images-->
+
+        <!--Navigation Auto-->
+
+        <div class="navigation-auto">
+          <div class="auto-btn1"></div>
+          <div class="auto-btn2"></div>
+          <div class="auto-btn3"></div>
+          <div class="auto-btn4"></div>
+          <div class="auto-btn5"></div>
+        </div>
+      </div>
+
+      <div class="manual-navigation">
+        <label for="radio1" class="manual-btn"></label>
+        <label for="radio2" class="manual-btn"></label>
+        <label for="radio3" class="manual-btn"></label>
+        <label for="radio4" class="manual-btn"></label>
+        <label for="radio5" class="manual-btn"></label>
+      </div>
+    </div>
   </body>
   <script src="./script.js"></script>
 </html>
