background color update

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </nav>
     </header>
     <main>
-      <div class="swiper">
+      <div id="swiper" class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="swiper-img">
