properties wrapper development

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             <a href="#swiper" class="nav-links">Início</a>
           </li>
           <li class="nav-list-item">
-            <a class="nav-links">Imóveis Disponíveis</a>
+            <a href="#properties-wrapper" class="nav-links"
+              >Imóveis Disponíveis</a
+            >
           </li>
           <li class="nav-list-item"><a class="nav-links">Contato</a></li>
           <li class="nav-list-item"><a class="nav-links">Sobre</a></li>
@@ -78,6 +80,33 @@
       </div>
 
       <!--swiper end-->
+
+      <div id="properties-wrapper" class="available-properties-wrapper">
+        <div class="available-property">
+          <img src="./assets/property-ilustration.jpg" />
+        </div>
+        <div class="available-property">
+          <img src="./assets/property-ilustration.jpg" />
+        </div>
+        <div class="available-property">
+          <img src="./assets/property-ilustration.jpg" />
+        </div>
+        <div class="available-property">
+          <img src="./assets/property-ilustration.jpg" />
+        </div>
+        <div class="available-property">
+          <img src="./assets/property-ilustration.jpg" />
+        </div>
+        <div class="available-property">
+          <img src="./assets/property-ilustration.jpg" />
+        </div>
+        <div class="available-property">
+          <img src="./assets/property-ilustration.jpg" />
+        </div>
+        <div class="available-property">
+          <img src="./assets/property-ilustration.jpg" />
+        </div>
+      </div>
     </main>
     <footer>
       <h1>FOOTER</h1>
