header swiper and properties development

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
   <body>
     <header>
       <img
+        href="#"
         class="header-logo"
         alt="imagem-logo"
         src="./assets/logo.png"
-        href="#swiper"
       />
       <nav>
         <ul class="nav-list">
           <li class="nav-list-item">
-            <a href="#swiper" class="nav-links">Início</a>
+            <a href="#" class="nav-links">Início</a>
           </li>
           <li class="nav-list-item">
-            <a href="#properties-wrapper" class="nav-links"
+            <a href="#properties-focus" class="nav-links"
               >Imóveis Disponíveis</a
             >
           </li>
@@ -50,27 +50,17 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="swiper-img">
-              <img src="./assets/slider4.png" alt="Foto 01" />
+              <img src="./assets/slider1.png" alt="Foto 01" />
             </div>
           </div>
           <div class="swiper-slide">
             <div class="swiper-img">
-              <img src="./assets/slider1.png" alt="Foto 02" />
+              <img src="./assets/slider2.png" alt="Foto 02" />
             </div>
           </div>
           <div class="swiper-slide">
             <div class="swiper-img">
               <img src="./assets/slider3.png" alt="Foto 03" />
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="swiper-img">
-              <img src="./assets/slider2.png" alt="Foto 01" />
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="swiper-img">
-              <img src="./assets/slider5.png" alt="Foto 01" />
             </div>
           </div>
         </div>
@@ -80,31 +70,35 @@
       </div>
 
       <!--swiper end-->
-
-      <div id="properties-wrapper" class="available-properties-wrapper">
-        <div class="available-property">
-          <img src="./assets/property-ilustration.jpg" />
-        </div>
-        <div class="available-property">
-          <img src="./assets/property-ilustration.jpg" />
-        </div>
-        <div class="available-property">
-          <img src="./assets/property-ilustration.jpg" />
-        </div>
-        <div class="available-property">
-          <img src="./assets/property-ilustration.jpg" />
-        </div>
-        <div class="available-property">
-          <img src="./assets/property-ilustration.jpg" />
-        </div>
-        <div class="available-property">
-          <img src="./assets/property-ilustration.jpg" />
-        </div>
-        <div class="available-property">
-          <img src="./assets/property-ilustration.jpg" />
-        </div>
-        <div class="available-property">
-          <img src="./assets/property-ilustration.jpg" />
+      <div class="properties">
+        <div class="available-properties-wrapper">
+          <div class="available-property">
+            <img
+              id="properties-focus"
+              src="./assets/property-ilustration.jpg"
+            />
+          </div>
+          <div class="available-property">
+            <img src="./assets/property-ilustration.jpg" />
+          </div>
+          <div class="available-property">
+            <img src="./assets/property-ilustration.jpg" />
+          </div>
+          <div class="available-property">
+            <img src="./assets/property-ilustration.jpg" />
+          </div>
+          <div class="available-property">
+            <img src="./assets/property-ilustration.jpg" />
+          </div>
+          <div class="available-property">
+            <img src="./assets/property-ilustration.jpg" />
+          </div>
+          <div class="available-property">
+            <img src="./assets/property-ilustration.jpg" />
+          </div>
+          <div class="available-property">
+            <img src="./assets/property-ilustration.jpg" />
+          </div>
         </div>
       </div>
     </main>
