--- a/index.html
+++ b/index.html
@@ -19,24 +19,19 @@
   </head>
   <body>
     <header>
-      <img
-        href="#"
-        class="header-logo"
-        alt="imagem-logo"
-        src="./assets/logo.png"
-      />
+      <a href="#">
+        <img class="header-logo" alt="imagem-logo" src="./assets/logo.png" />
+      </a>
       <nav>
         <ul class="nav-list">
           <li class="nav-list-item">
             <a href="#" class="nav-links">Início</a>
           </li>
           <li class="nav-list-item">
-            <a href="#properties-focus" class="nav-links"
-              >Imóveis Disponíveis</a
-            >
+            <a href="#properties" class="nav-links">Imóveis Disponíveis</a>
           </li>
-          <li class="nav-list-item"><a class="nav-links">Contato</a></li>
           <li class="nav-list-item"><a class="nav-links">Sobre</a></li>
+          <li class="nav-list-item"><a class="nav-links">Contato</a></li>
         </ul>
         <img
           class="mobile-menu-icon"
@@ -46,6 +41,15 @@
       </nav>
     </header>
     <main>
+      <button class="top-arrow-btn">
+        <a href="#">
+          <img
+            class="top-arrow-img"
+            src="./assets/top-arrow.png"
+            alt="Botão Para Retornar ao Topo"
+          />
+        </a>
+      </button>
       <div id="swiper" class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -71,6 +75,7 @@
 
       <!--swiper end-->
       <div class="properties">
+        <h1 id="properties" class="properties-title">Imóveis Disponíveis</h1>
         <div class="available-properties-wrapper">
           <div class="available-property">
             <img
