fix(mobile): breakpoints optimization

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           />
         </a>
       </button>
-      <div id="swiper" class="swiper">
+      <section id="swiper" class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="swiper-img">
@@ -71,10 +71,10 @@
         <div class="swiper-button-next swiper-btn"></div>
         <div class="swiper-button-prev swiper-btn"></div>
         <div class="swiper-pagination"></div>
-      </div>
+      </section>
 
-      <!--swiper end-->
-      <div class="properties">
+      <!--Swiper End-->
+      <section class="properties">
         <h1 id="properties" class="properties-title">Imóveis Disponíveis</h1>
         <div class="available-properties-wrapper">
           <div class="available-property">
@@ -105,7 +105,10 @@
             <img src="./assets/property-ilustration.jpg" />
           </div>
         </div>
-      </div>
+      </section>
+
+      <!--Available Properties End-->
+      <section class="about"></section>
     </main>
     <footer>
       <h1>FOOTER</h1>
