chore(desktop/mobile): flip card development

--- a/index.html
+++ b/index.html
@@ -78,12 +78,14 @@
         <h1 id="properties" class="properties-title">Imóveis Disponíveis</h1>
         <div class="available-properties-wrapper">
           <div class="available-property">
-            <img
-              id="properties-focus"
-              src="./assets/property-ilustration.jpg"
-            />
+            <div class="flip-container">
+              <div class="flipper">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </div>
           </div>
-          <div class="available-property">
+          <!-- <div class="available-property">
             <img src="./assets/property-ilustration.jpg" />
           </div>
           <div class="available-property">
@@ -103,7 +105,7 @@
           </div>
           <div class="available-property">
             <img src="./assets/property-ilustration.jpg" />
-          </div>
+          </div> -->
         </div>
       </section>
 
