feat(desktop/mobile): properties flip cards added

--- a/index.html
+++ b/index.html
@@ -79,31 +79,78 @@
         <div class="available-properties-wrapper">
           <div class="available-property">
             <div class="flipper">
-              <div class="front"></div>
+              <div class="front">
+                <img src="./assets/imóvel-barra.jpg" />
+                <button class="property-button">Barra da Tijuca</button>
+              </div>
               <div class="back"></div>
             </div>
           </div>
-          <!-- <div class="available-property">
-            <img src="./assets/property-ilustration.jpg" />
+          <div class="available-property">
+            <div class="flipper">
+              <div class="front">
+                <img src="./assets/imóvel-recreio.jpg" />
+                <button class="property-button">
+                  Recreio dos Bandeirantes
+                </button>
+              </div>
+              <div class="back"></div>
+            </div>
           </div>
           <div class="available-property">
-            <img src="./assets/property-ilustration.jpg" />
+            <div class="flipper">
+              <div class="front">
+                <img src="./assets/imóvel-jacarepagua.jpg" />
+                <button class="property-button">Jacarepaguá</button>
+              </div>
+              <div class="back"></div>
+            </div>
           </div>
           <div class="available-property">
-            <img src="./assets/property-ilustration.jpg" />
+            <div class="flipper">
+              <div class="front">
+                <img src="./assets/imóvel-ipanema.jpg" />
+                <button class="property-button">Ipanema</button>
+              </div>
+              <div class="back"></div>
+            </div>
           </div>
           <div class="available-property">
-            <img src="./assets/property-ilustration.jpg" />
+            <div class="flipper">
+              <div class="front">
+                <img src="./assets/imóvel-tijuca.jpg" />
+                <button class="property-button">Tijuca</button>
+              </div>
+              <div class="back"></div>
+            </div>
           </div>
           <div class="available-property">
-            <img src="./assets/property-ilustration.jpg" />
+            <div class="flipper">
+              <div class="front">
+                <img src="./assets/imóvel-campogrande.jpg" />
+                <button class="property-button">Campo Grande</button>
+              </div>
+              <div class="back"></div>
+            </div>
           </div>
           <div class="available-property">
-            <img src="./assets/property-ilustration.jpg" />
+            <div class="flipper">
+              <div class="front">
+                <img src="./assets/imóvel-leblon.jpg" />
+                <button class="property-button">Leblon</button>
+              </div>
+              <div class="back"></div>
+            </div>
           </div>
           <div class="available-property">
-            <img src="./assets/property-ilustration.jpg" />
-          </div> -->
+            <div class="flipper">
+              <div class="front">
+                <img src="./assets/imóvel-botafogo.jpg" />
+                <button class="property-button">Botafogo</button>
+              </div>
+              <div class="back"></div>
+            </div>
+          </div>
         </div>
       </section>
 
