feat(desktop):search icon added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
           </li>
           <li class="nav-list-item"><a class="nav-links">Sobre</a></li>
           <li class="nav-list-item"><a class="nav-links">Contato</a></li>
+          <li>
+            <img
+              class="search-icon"
+              src="./assets/search-icon.png"
+              alt="ícone-pesquisa"
+            />
+          </li>
         </ul>
         <img
           class="mobile-menu-icon"
