feat(desktop/mobile): footer added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <a href="#">
-        <img class="header-logo" alt="imagem-logo" src="./assets/logo.png" />
+        <img class="company-logo" alt="imagem-logo" src="./assets/logo.png" />
       </a>
       <nav>
         <ul class="nav-list">
@@ -31,13 +31,8 @@
             <a href="#properties" class="nav-links">Imóveis Disponíveis</a>
           </li>
           <li class="nav-list-item"><a class="nav-links">Sobre</a></li>
-          <li class="nav-list-item"><a class="nav-links">Contato</a></li>
-          <li>
-            <img
-              class="search-icon"
-              src="./assets/search-icon.png"
-              alt="ícone-pesquisa"
-            />
+          <li class="nav-list-item">
+            <a href="#contact" class="nav-links">Contato</a>
           </li>
         </ul>
         <img
@@ -165,7 +160,32 @@
       <section class="about"></section>
     </main>
     <footer>
-      <h1>FOOTER</h1>
+      <div class="footer-wrapper">
+        <div class="footer-info">
+          <p>
+            Trovão Imóveis Corretora S/A. <br />
+            CNPJ: 00.000.000/0000-00 <br />
+            CEP: 00000-000. <br />
+            Sede Administrativa: Rua Nome da Rua <br />
+            Nº 000 - Rio de Janeiro.
+          </p>
+        </div>
+        <div class="contact-footer">
+          <h3 id="contact">Contato</h3>
+          <ul>
+            <li class="contact-list"><img src="./assets/ig.png" /></li>
+            <li class="contact-list"><img src="./assets/wp.png" /></li>
+          </ul>
+          <p>(21)97957-9537</p>
+        </div>
+      </div>
+      <div class="bottom-rights">
+        <p>
+          Copyright © - Todos os direitos reservados: Trovão Imóveis Corretora
+          S/A - Desenvolvido por
+          <a>Guilherme Augusto</a>.
+        </p>
+      </div>
     </footer>
   </body>
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
