feat(mobile) mobile menu development

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#">
         <img class="company-logo" alt="imagem-logo" src="./assets/logo.png" />
       </a>
-      <nav>
+      <nav class="nav-desktop">
         <ul class="nav-list">
           <li class="nav-list-item">
             <a href="#" class="nav-links">Início</a>
@@ -37,12 +37,33 @@
             <a href="#contact" class="nav-links">Contato</a>
           </li>
         </ul>
+      </nav>
+      <button class="btn-menu" onclick="trocarImagem()">
         <img
           class="mobile-menu-icon"
           alt="icone-menu"
           src="./assets/menu-icon.png"
         />
-      </nav>
+      </button>
+
+      <div class="menu-mobile">
+        <nav class="nav-mb">
+          <ul class="nav-list-mb">
+            <li class="nav-list-item">
+              <a href="#" class="nav-links">Início</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="#properties" class="nav-links">Imóveis Disponíveis</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="#about" class="nav-links">Sobre</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="#contact" class="nav-links">Contato</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <button class="top-arrow-btn">
