--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </li>
         </ul>
       </nav>
-      <button class="btn-menu" onclick="trocarImagem()">
+      <button class="btn-menu" onclick="menuToCloseBtn()">
         <img
           class="mobile-menu-icon"
           alt="icone-menu"
