feat(mobile): mobile menu completed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </li>
         </ul>
       </nav>
-      <button class="btn-menu" onclick="menuToCloseBtn()">
+      <button class="btn-menu" onclick="showMobileMenu()">
         <img
           class="mobile-menu-icon"
           alt="icone-menu"
@@ -50,16 +50,24 @@
         <nav class="nav-mb">
           <ul class="nav-list-mb">
             <li class="nav-list-item">
-              <a href="#" class="nav-links">Início</a>
+              <a href="#" class="nav-links" onclick="showMobileMenu()"
+                >Início</a
+              >
             </li>
             <li class="nav-list-item">
-              <a href="#properties" class="nav-links">Imóveis Disponíveis</a>
+              <a href="#properties" class="nav-links" onclick="showMobileMenu()"
+                >Imóveis Disponíveis</a
+              >
             </li>
             <li class="nav-list-item">
-              <a href="#about" class="nav-links">Sobre</a>
+              <a href="#about" class="nav-links" onclick="showMobileMenu()"
+                >Sobre</a
+              >
             </li>
             <li class="nav-list-item">
-              <a href="#contact" class="nav-links">Contato</a>
+              <a href="#contact" class="nav-links" onclick="showMobileMenu()"
+                >Contato</a
+              >
             </li>
           </ul>
         </nav>
@@ -198,10 +206,21 @@
           </div>
           <div class="about-text-wrapper">
             <p class="about-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
-              praesentium sit, labore obcaecati inventore placeat enim
-              accusantium sed similique, incidunt quia rem ullam mollitia ipsa
-              doloremque harum? Libero, quasi consequuntur!
+              Oi! Eu me chamo Vitor Trovão. Sou formado em transações
+              imobiliárias e estou concluindo o ensino superior em Gestão
+              Imobiliária. Moro no estado do Rio de Janeiro e realizo
+              atendimentos em todas as localidades em que os meus clientes
+              tiverem interesse. Estou no ramo imobiliário há 4 anos, onde me
+              apaixonei por mudar a vida das pessoas, ajudando-as a adquirir não
+              só o seu lar, mas também o seu sonho! Desde criança, via meus pais
+              lutarem para conseguir pagar o aluguel da casa em que morávamos.
+              Hoje, eles passaram dessa fase e conquistaram seu próprio lar.
+              Quando temos nossa casa, é algo totalmente confortável e a
+              qualidade de vida é outra. Hoje, tenho o privilégio de transformar
+              a vida das pessoas assim como a dos meus pais um dia foram
+              transformadas. A espera acabou e você pode realizar o sonho da
+              casa própria. Entre em contato comigo e conheça as vantagens,
+              solicitando uma simulação.
             </p>
           </div>
         </div>
