fix(desktop/mobile): footer adress correction

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <p>
             Trovão Imóveis Serviços Imobiliários. <br />
             CRECI: 80.660. <br />
-            Sede Administrativa: Rua Barcelos Domingos, Nº 32. <br />
+            Sede Administrativa: Rua Barcelos Domingos, Nº 32, Sala 307. <br />
             CEP: 23080-020. <br />
             Rio de Janeiro.
           </p>
