feat(desktop/mobile): see more button development

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <section class="properties">
         <h1 id="properties" class="properties-title">Imóveis Disponíveis</h1>
         <div class="available-properties-wrapper">
-          <div class="available-property">
+          <div class="available-property main-property">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/imóvel-barra.jpg" alt="preview-imóvel" />
@@ -119,7 +119,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property">
+          <div class="available-property main-property">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/imóvel-recreio.jpg" alt="preview-imóvel" />
@@ -130,7 +130,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property">
+          <div class="available-property secundary-property">
             <div class="flipper">
               <div class="front">
                 <img
@@ -142,7 +142,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property">
+          <div class="available-property secundary-property">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/imóvel-ipanema.jpg" alt="preview-imóvel" />
@@ -151,7 +151,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property">
+          <div class="available-property secundary-property">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/imóvel-tijuca.jpg" alt="preview-imóvel" />
@@ -160,7 +160,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property">
+          <div class="available-property secundary-property">
             <div class="flipper">
               <div class="front">
                 <img
@@ -172,7 +172,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property">
+          <div class="available-property secundary-property">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/imóvel-leblon.jpg" alt="preview-imóvel" />
@@ -181,7 +181,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property">
+          <div class="available-property secundary-property">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/imóvel-botafogo.jpg" alt="preview-imóvel" />
@@ -191,6 +191,9 @@
             </div>
           </div>
         </div>
+        <button class="see-more-btn" onclick="showProperties()">
+          Ver Mais
+        </button>
       </section>
 
       <!--Available Properties End-->
