fix(mobile): properties grid optimization

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
           />
         </a>
       </button>
+
+      <!--Swiper Start-->
       <section id="swiper" class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -107,6 +109,8 @@
       </section>
 
       <!--Swiper End-->
+
+      <!--Properties Start-->
       <section class="properties">
         <h1 id="properties" class="properties-title">Imóveis Disponíveis</h1>
         <div class="available-properties-wrapper">
@@ -130,7 +134,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property secundary-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
                 <img
@@ -142,7 +146,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property secundary-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/imóvel-ipanema.jpg" alt="preview-imóvel" />
@@ -151,7 +155,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property secundary-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/imóvel-tijuca.jpg" alt="preview-imóvel" />
@@ -160,7 +164,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property secundary-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
                 <img
@@ -172,7 +176,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property secundary-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/imóvel-leblon.jpg" alt="preview-imóvel" />
@@ -181,7 +185,7 @@
               <div class="back"></div>
             </div>
           </div>
-          <div class="available-property secundary-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/imóvel-botafogo.jpg" alt="preview-imóvel" />
@@ -196,7 +200,7 @@
         </button>
       </section>
 
-      <!--Available Properties End-->
+      <!--Properties End-->
       <section class="about">
         <h2 id="about">Sobre</h2>
         <div class="about-sheet">
